/*
  Customer Offer

  This service domain orchestrates the processing of a product offer for a new or established &nbsp;customer. The offer process is defined specifically for the product or service being considered and can include actions such as document checks, collateral allocation, credit assessments, underwriting decisions, regulatory and procedural checks, eligibility checks, the use of internal and external specialist services (such as evaluations and legal advice).

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customeroffer.api.bqbookingservice;

import "google/protobuf/empty.proto";
import public "model/http_error.proto";
import public "model/retrieve_booking_response.proto";
import public "model/update_booking_request.proto";
import public "model/update_booking_response.proto";

service BQBookingService {
  rpc RetrieveBooking (RetrieveBookingRequest) returns (RetrieveBookingResponse);

  rpc UpdateBooking (UpdateBookingRequest) returns (UpdateBookingResponse);

}

message RetrieveBookingRequest {
  string customerofferId = 1;
  string bookingId = 2;

}

message UpdateBookingRequest {
  string customerofferId = 1;
  string bookingId = 2;
  UpdateBookingRequest updateBookingRequest = 3;

}

