/*
  Customer Offer

  This service domain orchestrates the processing of a product offer for a new or established &nbsp;customer. The offer process is defined specifically for the product or service being considered and can include actions such as document checks, collateral allocation, credit assessments, underwriting decisions, regulatory and procedural checks, eligibility checks, the use of internal and external specialist services (such as evaluations and legal advice).

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customeroffer.api.bqproductinitializationservice;

import "google/protobuf/empty.proto";
import public "model/customer_offer_procedure.proto";
import public "model/http_error.proto";
import public "model/update_product_initialization_request.proto";
import public "model/update_product_initialization_response.proto";

service BQProductInitializationService {
  rpc RetrieveProductInitialization (RetrieveProductInitializationRequest) returns (CustomerOfferProcedure);

  rpc UpdateProductInitialization (UpdateProductInitializationRequest) returns (UpdateProductInitializationResponse);

}

message RetrieveProductInitializationRequest {
  string customerofferId = 1;
  string productinitializationId = 2;

}

message UpdateProductInitializationRequest {
  string customerofferId = 1;
  string productinitializationId = 2;
  UpdateProductInitializationRequest updateProductInitializationRequest = 3;

}

