/*
  Customer Offer

  This service domain orchestrates the processing of a product offer for a new or established &nbsp;customer. The offer process is defined specifically for the product or service being considered and can include actions such as document checks, collateral allocation, credit assessments, underwriting decisions, regulatory and procedural checks, eligibility checks, the use of internal and external specialist services (such as evaluations and legal advice).

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customeroffer.api.bqunderwritingservice;

import "google/protobuf/empty.proto";
import public "model/customer_offer_procedure.proto";
import public "model/http_error.proto";
import public "model/update_underwriting_request.proto";
import public "model/update_underwriting_response.proto";

service BQUnderwritingService {
  rpc RetrieveUnderwriting (RetrieveUnderwritingRequest) returns (CustomerOfferProcedure);

  rpc UpdateUnderwriting (UpdateUnderwritingRequest) returns (UpdateUnderwritingResponse);

}

message RetrieveUnderwritingRequest {
  string customerofferId = 1;
  string underwritingId = 2;

}

message UpdateUnderwritingRequest {
  string customerofferId = 1;
  string underwritingId = 2;
  UpdateUnderwritingRequest updateUnderwritingRequest = 3;

}

