/*
  Customer Offer

  This service domain orchestrates the processing of a product offer for a new or established &nbsp;customer. The offer process is defined specifically for the product or service being considered and can include actions such as document checks, collateral allocation, credit assessments, underwriting decisions, regulatory and procedural checks, eligibility checks, the use of internal and external specialist services (such as evaluations and legal advice).

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customeroffer.com.redhat.mercury.customeroffer.api.bqcreditservice;

import "google/protobuf/empty.proto";
import public "com.redhat.mecury.customeroffer.model/http_error.proto";
import public "com.redhat.mecury.customeroffer.model/retrieve_credit_response.proto";
import public "com.redhat.mecury.customeroffer.model/update_credit_request.proto";
import public "com.redhat.mecury.customeroffer.model/update_credit_response.proto";

service BQCreditService {
  rpc RetrieveCredit (RetrieveCreditRequest) returns (RetrieveCreditResponse);

  rpc UpdateCredit (UpdateCreditRequest) returns (UpdateCreditResponse);

}

message RetrieveCreditRequest {
  string customerofferId = 1;
  string creditId = 2;

}

message UpdateCreditRequest {
  string customerofferId = 1;
  string creditId = 2;
  UpdateCreditRequest updateCreditRequest = 3;

}

