/*
  Customer Offer

  This service domain orchestrates the processing of a product offer for a new or established &nbsp;customer. The offer process is defined specifically for the product or service being considered and can include actions such as document checks, collateral allocation, credit assessments, underwriting decisions, regulatory and procedural checks, eligibility checks, the use of internal and external specialist services (such as evaluations and legal advice).

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customeroffer.v10.api.bqdisclosuresservice;

import "google/protobuf/empty.proto";
import public "v10/model/customer_offer_procedure.proto";
import public "v10/model/http_error.proto";
import public "v10/model/update_disclosures_request.proto";
import public "v10/model/update_disclosures_response.proto";

service BQDisclosuresService {
  rpc RetrieveDisclosures (RetrieveDisclosuresRequest) returns (CustomerOfferProcedure);

  rpc UpdateDisclosures (UpdateDisclosuresRequest) returns (UpdateDisclosuresResponse);

}

message RetrieveDisclosuresRequest {
  string customerofferId = 1;
  string disclosuresId = 2;

}

message UpdateDisclosuresRequest {
  string customerofferId = 1;
  string disclosuresId = 2;
  UpdateDisclosuresRequest updateDisclosuresRequest = 3;

}

